# Sol-CV

./: README.md  environment.yml
basic-cv/: CMakeLists.txt  Makefile  README.md  todo.md
basic-cv/include/: dip.cpp  dip.h  filters.cpp  filters.h  imgops.cpp  imgops.h  transforms.cpp  transforms.h  utils.cpp  utils.h
basic-cv/output/: output.txt
basic-cv/py-src/: dip.py  transforms.py
basic-cv/src/: main.cpp
object-detection/emotion-detector/: .gitignore  README.md  collect.py  dataset.yaml  main.ipynb  requirements.txt  train.sh
